fix boss attacking, update document

--- a/Aladdin-genesis/Aladdin-genesis.vcxproj.filters
+++ b/Aladdin-genesis/Aladdin-genesis.vcxproj.filters
@@ -40,11 +40,11 @@
     <Filter Include="GameObjects\Enemy">
       <UniqueIdentifier>{19e3edb2-2f39-4c9b-a29e-e5ce2de5409c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="GameObjects\Enemy\Jafar">
-      <UniqueIdentifier>{cd69697b-865b-4bc9-95c0-d0c772cc5b77}</UniqueIdentifier>
-    </Filter>
     <Filter Include="GameObjects\Enemy\Creep">
       <UniqueIdentifier>{7b3f898e-4b38-4a12-a74c-ec1bdb8c3dc1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameObjects\Enemy\Boss">
+      <UniqueIdentifier>{cd69697b-865b-4bc9-95c0-d0c772cc5b77}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -166,7 +166,7 @@
       <Filter>Scene</Filter>
     </ClCompile>
     <ClCompile Include="Jafar.cpp">
-      <Filter>GameObjects\Enemy\Jafar</Filter>
+      <Filter>GameObjects\Enemy\Boss</Filter>
     </ClCompile>
     <ClCompile Include="EnemyBat.cpp">
       <Filter>GameObjects\Enemy\Creep</Filter>
@@ -312,7 +312,7 @@
       <Filter>Scene</Filter>
     </ClInclude>
     <ClInclude Include="Jafar.h">
-      <Filter>GameObjects\Enemy\Jafar</Filter>
+      <Filter>GameObjects\Enemy\Boss</Filter>
     </ClInclude>
     <ClInclude Include="EnemyBat.h">
       <Filter>GameObjects\Enemy\Creep</Filter>
